# TT_InferenceLayer

./: .codecov.yml  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_PROGRESS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_from_pipeline_output.py  test_gemma.py  test_out.txt  test_results.txt  test_results_final.txt  test_run_output.txt  test_summary.txt  test_unit_out.txt
.github/workflows/: ci.yml  release.yml
config/prompts/: system_prompt.txt  system_prompt_minimal.txt  user_prompt_template.txt  user_prompt_template_minimal.txt
config/schema/: email_triage_v2.json
doc/: LLM_Layer_Consolidato_v2v3_chat_SUPER_DETAILED.md  PYDANTIC_FIELD_NAMING_REFERENCE.md  next_implementation_inference_layer.md
docker/: Dockerfile  Dockerfile.worker
src/inference_layer/: __init__.py  config.py  logging_config.py  main.py
src/inference_layer/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  models.py  routes_async.py  routes_sync.py
src/inference_layer/llm/: __init__.py  base_client.py  exceptions.py  ollama_client.py  prompt_builder.py  sglang_client.py  text_utils.py
src/inference_layer/models/: __init__.py  enums.py  input_models.py  llm_models.py  output_models.py  pipeline_version.py
src/inference_layer/monitoring/: __init__.py  metrics.py
src/inference_layer/persistence/: __init__.py  redis_client.py  repository.py
src/inference_layer/pii/: __init__.py  redactor.py
src/inference_layer/retry/: __init__.py  engine.py  exceptions.py  metadata.py  strategies.py
src/inference_layer/tasks/: __init__.py  celery_app.py  triage_tasks.py
src/inference_layer/validation/: __init__.py  enrichment.py  exceptions.py  pipeline.py  span_calculator.py  stage1_json_parse.py  stage2_schema.py  stage3_business_rules.py  stage4_quality.py  verifiers.py
tests/: conftest.py
tests/fixtures/: __init__.py  invalid_business_rules_response.json  invalid_json_response.json  invalid_schema_response.json  low_quality_response.json  retry_scenarios.json  sample_candidates.json  sample_email.json  valid_llm_response.json
tests/integration/: __init__.py  conftest.py
tests/integration/api/: test_api_integration.py
tests/integration/llm/: test_ollama_integration.py
tests/integration/retry/: __init__.py  test_retry_integration.py
tests/integration/validation/: __init__.py  test_validation_pipeline.py
tests/unit/: __init__.py  conftest.py
tests/unit/api/: test_dependencies.py  test_models.py
tests/unit/llm/: test_prompt_builder.py  test_text_utils.py
tests/unit/persistence/: __init__.py  test_redis_client.py  test_repository.py
tests/unit/pii/: test_redactor.py
tests/unit/retry/: __init__.py  test_engine.py  test_strategies.py
tests/unit/validation/: test_enrichment.py  test_span_calculator.py  test_stage1_json_parse.py  test_stage2_schema.py  test_stage3_business_rules.py  test_stage4_quality.py  test_verifiers.py
