[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-layer"
version = "0.1.0"
description = "LLM Inference Layer for Thread Classificator Mail Pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TT Team", email = "dev@example.com"}
]
license = {text = "Proprietary"}
keywords = ["llm", "email", "classification", "fastapi", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    
    # JSON Schema validation
    "jsonschema>=4.21.0",
    
    # HTTP client for LLM calls
    "httpx>=0.27.0",
    
    # Async task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    
    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    
    # Monitoring & instrumentation
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",  # For TestClient
    
    # Code quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    
    # Type stubs
    "types-redis>=4.6.0",
    "types-jsonschema>=4.21.0",
]

[project.urls]
Homepage = "https://github.com/your-org/TT_InferenceLayer"
Documentation = "https://github.com/your-org/TT_InferenceLayer/blob/main/README.md"
Repository = "https://github.com/your-org/TT_InferenceLayer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["inference_layer*"]
namespaces = false

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=inference_layer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# === Ruff Configuration ===
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from statement
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["inference_layer"]

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

# === Black Configuration ===
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# === Coverage Configuration ===
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
